styles/base.less
/* ... */
.playlistElem {
    padding: 4px;
    cursor: default;
}
#left-menu > ul > .selected,
#left-menu > .selected:nth-child(odd) {
}

#login {
	margin-bottom: 10px;
}
#login a {
	display: block;
	padding: 5px 4px;
	text-decoration: underline;
	white-space: nowrap;
	width: 200px;
	overflow: hidden;
	text-overflow: ellipsis;
}

#playlists .remote .title {
    display: inline-block;
    width: 160px;
    padding-right: 20px;
}
#playlists .selected.remote .title {
}
#playlists {
	margin-bottom: 5px;
}
#new-playlist {
}
#new-playlist span {
    padding: 3px 4px;
    cursor: pointer;
    text-decoration: none;
    display: block;
}
#left-menu #new-playlist input[type=text],
#left-menu input.rename {
	padding: 2px 2px;
}
#left-menu .playlistElem.selected {
}

/* TABS
 ***********************************/
#tabs { 
	margin-bottom: 10px;
}
#tabs li {
	padding: 4px 4px;
}
#left-menu li.loading {
}

.shuffle-on { 
	border: 0;
	float: right;
	width: 16px;
	height: 16px;
	background: url('/images/shuffle-on.png') no-repeat center center;
}
.shuffle-off { 
	border: 0;
	float: right;
	width: 16px;
	height: 16px;
	background: url('/images/shuffle-off.png') no-repeat center center;
}

#spotify-importer {
	width: 300px;
	text-shadow: 0px 1px 1px transparent;
}
#spotify-importer h2 {
    border-bottom: 1px solid rgba(255,255,255,0.7);
    text-align: left;
    margin-bottom: 5px;
    font-weight: bold;
	text-shadow: 0px 1px 1px transparent;
	float: left;
}

#spotify-importer a {
	color: lightblue;
	text-shadow: 0px 1px 1px transparent;
	font-weight: bold;
	float: right;
}

#spotify-importer textarea {
	border: solid 1px #FFF;
	width: 298px;
	height: 150px;
	resize: none;
	color: #FFF;
	outline: 0;
}
#spotify-importer .added {
	display: block;
	margin-left: 65px;
	margin-top: 10px;
	float: left;
	text-align: right;
}
#spotify-importer .max {
	margin-top: 10px;
	display: block;
	float: left;
}
#spotify-importer .cancel {
	float: left;
	margin-top: 5px;
}
#spotify-importer .start {
	float: right;
	margin-top: 5px;
}

/* VIDEO INFO
 ***********************************/

#video {
    height: 280px;
    color: #444;
}
#info {
    position: relative;
    text-align: center;
    padding: 5px;
    overflow: hidden;
    height: 40px;
    .lightGradient;
}
#info .title {
    .bold();
	text-shadow: 0px 1px 1px #FFF;
    text-align: center;
    cursor: default;
    height: 12px;
	text-overflow: ellipsis;
    overflow: hidden;
}
#info #fatbar-toggle {
    position: absolute;
    margin: 4px;
    bottom: 0;
    right: 0;
}
#info .share {
    position: absolute;
    margin: 4px;
    bottom: 0;
    left: 0;
}

/* CONTROLS
 ***********************************/

#controls {
	position: absolute;
	bottom: 0;
	left: 0;
    height: 45px;
    width: 230px;
    text-align: center;
}
#prev {
    cursor: pointer;
    width: 30px;
    height: 30px;
    margin: 8px 0px 10px 8px;
    float: left;
    .border(30px);
    .button(url('/images/prev.png'));
	box-shadow: 0px 2px 3px rgba(0,0,0,0.8);
}

#playpause {
    cursor: pointer;
    width: 34px;
    height: 34px;
    margin: 6px 0px 10px 8px;
    float: left;
    .border(30px);
	.button(url('/images/play.png'));
	box-shadow: 0px 2px 3px rgba(0,0,0,0.8);
}
.playing  #controls > #playpause  {
    .button(url('/images/pause.png'));
	box-shadow: 0px 2px 3px rgba(0,0,0,0.8);
}
#controls > #prev:active, 
#controls > #playpause:active,
.playing  #controls > #playpause:active,
#controls > #next:active {
	box-shadow: 0px 0px 3px rgba(0,0,0,0.8);
}

#controls > #next { 
	cursor: pointer;
	width: 30px;
	height: 30px;
	margin: 8px;
	float: left;
	.border(30px);
	.button(url('/images/next.png'));
	box-shadow: 0px 2px 3px rgba(0,0,0,0.8);
}

#outer-volume-slider  {
	width: 70px;
    height: 7px;
    border: 1px solid #333;
    margin-top: 20px;
    .border(5px);
    background: rgba(0,0,0,0.2);
	float: left;
}
#volume-slider {
    position: relative;
    background: rgba(255,255,255,0.2);
    height: 100%;
    .border(5px);
}
#volume-slider-knob {
    position: absolute;
    right: 0;
    height: 7px;
    width: 7px;
    .border(7px);
    .lightGradient;
}

#controls > #fullscreen { 
	float: left;
	margin: 16px 8px 0 8px;
	width: 16px;
	height: 16px;
	background-image: url('/images/fullscreen.png');
	background-repeat: no-repeat;
	background-position: center;
}
#controls > .minimize  {
    background-image: url('/images/minimize.png') !important;
}

/* RIGHT
 ***********************************/

#content-right {
	position: absolute;
	left: 230px;
	width: 50%;
	height: 100%;
}

#content-right > .toolbar {
    height: 50px;
    .lightGradient;
}

#search {
    float: left;
    width: auto;
    margin: 12px 0 0 20px;
	position: relative;
}

#search > input[type=text] {
    width: 180px;
    height: 26px;
    padding: 0px 26px 0px 6px;
}
#search .loader {
	width: 16px;
	height: 11px; 
	position: absolute;
	z-index: 200;
	right: 5px;
	top: 8px;
	display: none;
}
body.searching #search .loader {
	display: block;
}

#content-right > .toolbar > #search-options { 
	width: 200px; 
	float: left; 
	margin: 18px 20px 0 20px; 
}
#content-right > .toolbar > #search-options > #search-options-options { 
	display: block;
	float: left;
	border: solid 0px red;
}
#content-right > .toolbar > #search-options > #search-options-options > input { 
	float: left;
	width: 20px;
}
#content-right > .toolbar > #search-options > #search-options-options > label { 
	float: left;
	width: 60px;
	color: #444;
	text-shadow: 0px 1px 1px #FFF;
}

#content-right > .toolbar > #toolbar-buttons { 
	float: right;
	margin-right: 20px;
}
#content-right > .toolbar > #toolbar-buttons > .link { 
	display: block;
	padding-top: 16px;
	color: #444;
	font-size: 14px;
	.bold();
	text-align: center;
	cursor: pointer;
}

#logo {
    float: right;
    background: url('/images/logo.gif') no-repeat center center;
    margin-right: 5px;
	cursor: pointer;
	width: 135px;
	height: 50px;
}
/* ... */

